revert macro based build since centos is behind here